@@ -339,8 +339,8 @@ class IsotopeRules extends Controller
 		
 		
 		// Product restrictions
-		$arrIds = array(0);
-		$arrTypes = array(0);
+		$arrIds = array();
+		$arrTypes = array();
 		foreach( $arrProducts as $objProduct )
 		{
 			$arrIds[] = $objProduct->pid ? $objProduct->pid : $objProduct->id;
@@ -351,10 +351,22 @@ class IsotopeRules extends Controller
 			}
 		}
 		
-		$arrProcedures[] = "(productRestrictions='none'
-							OR (productRestrictions='producttypes' AND (SELECT COUNT(*) FROM tl_iso_rule_restrictions WHERE pid=r.id AND type='producttypes' AND object_id IN (" . implode(',', $arrTypes) . "))>0)
-							OR (productRestrictions='products' AND (SELECT COUNT(*) FROM tl_iso_rule_restrictions WHERE pid=r.id AND type='products' AND object_id IN (" . implode(',', $arrIds) . "))>0)
-							OR (productRestrictions='pages' AND (SELECT COUNT(*) FROM tl_iso_rule_restrictions WHERE pid=r.id AND type='pages' AND object_id IN (SELECT page_id FROM tl_iso_product_categories WHERE pid IN (" . implode(',', $arrIds) . ")))))";
+		$arrRestrictions = array("productRestrictions='none'");
+		
+		if (count($arrTypes))
+		{
+			$arrRestrictions[] = "(productRestrictions='producttypes' AND (SELECT COUNT(*) FROM tl_iso_rule_restrictions WHERE pid=r.id AND type='producttypes' AND object_id IN (" . implode(',', $arrTypes) . "))>0)";
+		}
+		
+		if (count($arrIds))
+		{
+			$arrIds = array_unique($arrIds);
+			
+			$arrRestrictions[] = "(productRestrictions='products' AND (SELECT COUNT(*) FROM tl_iso_rule_restrictions WHERE pid=r.id AND type='products' AND object_id IN (" . implode(',', $arrIds) . "))>0)";
+			$arrRestrictions[] = "(productRestrictions='pages' AND (SELECT COUNT(*) FROM tl_iso_rule_restrictions WHERE pid=r.id AND type='pages' AND object_id IN (SELECT page_id FROM tl_iso_product_categories WHERE pid IN (" . implode(',', $arrIds) . "))))";
+		}
+
+		$arrProcedures[] = '(' . implode(' OR ', $arrRestrictions) . ')';
 		
 		
 		// Fetch and process rules
