@@ -10,6 +10,7 @@ Version 0.2.10 (2011-06-??)
 - Added product sku to filter module
 - Fixed error message when editing page category (Ticket #469)
 - Fixed IsotopeProductCollection::getProducts database caching
+- Fixed rules error on product restrictions when not product in cart (Ticket #471)
 - Changed tl_iso_products::getCategoryList from private to protected function (Ticket #477)
 
 Version 0.2.9 (2011-05-23)
